--- a/app/src/main/res/layout-land/main_menu.xml
+++ b/app/src/main/res/layout-land/main_menu.xml
@@ -32,6 +32,7 @@
                 android:background="@drawable/btn_selector"
                 android:drawableLeft="@drawable/ic_android_48dp"
                 android:drawableStart="@drawable/ic_android_48dp"
+                android:onClick="onClick"
                 android:text="@string/menu_single_player"
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_text_size"
@@ -44,6 +45,7 @@
                 android:background="@drawable/btn_selector"
                 android:drawableLeft="@drawable/ic_person_48dp"
                 android:drawableStart="@drawable/ic_person_48dp"
+                android:onClick="onClick"
                 android:text="@string/menu_multi_player"
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_text_size"
@@ -59,6 +61,7 @@
                 android:background="@drawable/btn_selector"
                 android:drawableLeft="@drawable/ic_star_48dp"
                 android:drawableStart="@drawable/ic_star_48dp"
+                android:onClick="onClick"
                 android:text="@string/scores_title"
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_text_size"
@@ -75,6 +78,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/btn_selector"
                     android:contentDescription="@string/settings_label"
+                    android:onClick="onClick"
                     android:src="@drawable/ic_settings_48dp" />
 
                 <ImageButton
@@ -84,6 +88,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/btn_selector"
                     android:contentDescription="@string/how_to_title"
+                    android:onClick="onClick"
                     android:src="@drawable/ic_help_48dp" />
 
             </LinearLayout>
