--- a/app/src/main/res/layout/bluetooth.xml
+++ b/app/src/main/res/layout/bluetooth.xml
@@ -1,27 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ MIT License
+  ~
+  ~ Copyright (c) 2017 klnvch
+  ~
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ in the Software without restriction, including without limitation the rights
+  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ furnished to do so, subject to the following conditions:
+  ~
+  ~ The above copyright notice and this permission notice shall be included in all
+  ~ copies or substantial portions of the Software.
+  ~
+  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  ~ SOFTWARE.
+  -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/btn_table_padding"
-    android:background="@drawable/paper_tiled">
+    android:background="@drawable/paper_tiled"
+    android:padding="@dimen/btn_table_padding">
 
     <LinearLayout
         android:id="@+id/layout_visibility"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/set_visibility"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/bluetooth_not_discoverable"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="@dimen/btn_text_size"
-            android:background="@drawable/btn_selector" />
+            android:text="@string/bluetooth_not_discoverable" />
 
         <TextView
             android:id="@+id/visibility_info"
@@ -44,8 +63,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:layout_below="@id/separator">
+        android:layout_below="@id/separator"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/layout_paired_devices"
@@ -60,9 +79,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:text="@string/bluetooth_preference_paired_devices"
-                android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bt_text_size" />
+                android:textSize="@dimen/bt_text_size"
+                android:textStyle="bold" />
 
             <ListView
                 android:id="@+id/list_paired_devices"
@@ -85,13 +104,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:text="@string/bluetooth_preference_found_devices"
-                android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bt_text_size" />
+                android:textSize="@dimen/bt_text_size"
+                android:textStyle="bold" />
 
             <ProgressBar
-                style="?android:attr/progressBarStyleHorizontal"
                 android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/label_available_devices"
@@ -103,10 +122,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/label_available_devices"
+                android:padding="@dimen/btn_table_padding"
                 android:text="@string/bluetooth_no_devices_found"
                 android:textColor="@color/black"
                 android:textSize="@dimen/bt_text_size"
-                android:padding="@dimen/btn_table_padding"
                 android:visibility="gone" />
 
             <ListView
