--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -56,44 +56,24 @@
         android:id="@+id/github"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_selector"
-        android:onClick="onClick"
-        android:text="@string/btn_github"
-        android:textColor="@color/black"
-        android:textSize="@dimen/btn_text_size"
-        android:textStyle="bold" />
+        android:text="@string/btn_github" />
 
     <Button
         android:id="@+id/rate_this_app"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_selector"
-        android:onClick="onClick"
-        android:text="@string/rate_this_app"
-        android:textColor="@color/black"
-        android:textSize="@dimen/btn_text_size"
-        android:textStyle="bold" />
+        android:text="@string/rate_this_app" />
 
     <Button
         android:id="@+id/send_feedback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_selector"
-        android:onClick="onClick"
-        android:text="@string/device_feedback"
-        android:textColor="@color/black"
-        android:textSize="@dimen/btn_text_size"
-        android:textStyle="bold" />
+        android:text="@string/device_feedback" />
 
     <Button
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_selector"
-        android:onClick="onClick"
-        android:text="@string/share"
-        android:textColor="@color/black"
-        android:textSize="@dimen/btn_text_size"
-        android:textStyle="bold" />
+        android:text="@string/share" />
 
 </LinearLayout>
