--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -29,7 +29,7 @@
     android:scrollbars="vertical">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
@@ -47,45 +47,30 @@
 
         <Button
             android:id="@+id/main_menu_single_player"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_selector"
             android:drawableLeft="@drawable/ic_android_48dp"
             android:drawableStart="@drawable/ic_android_48dp"
-            android:onClick="onClick"
-            android:text="@string/menu_single_player"
-            android:textColor="@color/black"
-            android:textSize="@dimen/btn_text_size"
-            android:textStyle="bold" />
+            android:text="@string/menu_single_player" />
 
         <Button
             android:id="@+id/main_menu_multi_player"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_selector"
             android:drawableLeft="@drawable/ic_person_48dp"
             android:drawableStart="@drawable/ic_person_48dp"
-            android:onClick="onClick"
-            android:text="@string/menu_multi_player"
-            android:textColor="@color/black"
-            android:textSize="@dimen/btn_text_size"
-            android:textStyle="bold" />
+            android:text="@string/menu_multi_player" />
 
         <Button
             android:id="@+id/main_menu_scores"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_selector"
             android:drawableLeft="@drawable/ic_star_48dp"
             android:drawableStart="@drawable/ic_star_48dp"
-            android:onClick="onClick"
-            android:text="@string/scores_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/btn_text_size"
-            android:textStyle="bold" />
+            android:text="@string/scores_title" />
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageButton
@@ -93,9 +78,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/btn_selector"
                 android:contentDescription="@string/settings_label"
-                android:onClick="onClick"
                 android:src="@drawable/ic_settings_48dp" />
 
             <ImageButton
@@ -103,9 +86,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/btn_selector"
                 android:contentDescription="@string/application_info_label"
-                android:onClick="onClick"
                 android:src="@drawable/ic_info_48dp" />
 
             <ImageButton
@@ -113,9 +94,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/btn_selector"
                 android:contentDescription="@string/how_to_title"
-                android:onClick="onClick"
                 android:src="@drawable/ic_help_48dp" />
 
         </LinearLayout>
