--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,178 +1,50 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ MIT License
+  ~
+  ~ Copyright (c) 2017 klnvch
+  ~
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ in the Software without restriction, including without limitation the rights
+  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ furnished to do so, subject to the following conditions:
+  ~
+  ~ The above copyright notice and this permission notice shall be included in all
+  ~ copies or substantial portions of the Software.
+  ~
+  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  ~ SOFTWARE.
+  -->
 
+<resources>
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@null</item>
+        <item name="android:buttonStyle">@style/ButtonStyle</item>
+        <item name="android:imageButtonStyle">@style/ImageButtonStyle</item>
+        <item name="android:buttonStyleToggle">@style/ToggleStyle</item>
+        <item name="colorButtonNormal">@color/white</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:background">@drawable/btn_selector</item>
+        <item name="android:onClick">onClick</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/btn_text_size</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-
-    <color name="AccentColor">#cc0000</color>
-    <color name="PopupColor">@color/AccentColor</color>
-    <color name="PopupTextColor">#ffffff</color>
-    <color name="ButtonTextColor">#ffffff</color>
-    <color name="BlurbColor">#a0a0a0</color>
-    <color name="SignOutButtonBackground">#e0e0e0</color>
-    <color name="SignOutButtonTextColor">#404040</color>
-
-    <dimen name="TitleSize">30sp</dimen>
-
-    <style name="GameScreen">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:gravity">center</item>
-        <item name="android:visibility">gone</item>
+    <style name="ImageButtonStyle" parent="Widget.AppCompat.ImageButton">
+        <item name="android:onClick">onClick</item>
     </style>
 
-    <style name="LLScreen" parent="@style/GameScreen">
-        <item name="android:orientation">vertical</item>
-        <item name="android:gravity">center</item>
-        <item name="android:padding">30dp</item>
-    </style>
-
-    <style name="GameplayScreen" parent="@style/LLScreen">
-        <item name="android:gravity">center</item>
-    </style>
-
-
-    <style name="InvPopup" parent="@style/LLScreen">
-        <item name="android:background">@color/PopupColor</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:layout_gravity">top|right</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center</item>
-        <item name="android:orientation">horizontal</item>
-    </style>
-
-    <style name="Blurb">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/BlurbColor</item>
-    </style>
-
-    <style name="GameBlurb" parent="@style/Blurb">
-        <item name="android:text">@string/game_blurb</item>
-        <item name="android:layout_marginBottom">40dp</item>
-    </style>
-
-    <style name="GameButton">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/AccentColor</item>
-        <item name="android:textColor">@color/ButtonTextColor</item>
-        <item name="android:paddingLeft">10dp</item>
-        <item name="android:paddingRight">10dp</item>
-    </style>
-
-    <style name="MainScreenButton" parent="@style/GameButton">
-        <item name="android:layout_marginBottom">10dp</item>
-    </style>
-
-    <style name="MainScreenButtonBlurb" parent="@style/GameBlurb">
-        <item name="android:layout_marginBottom">20dp</item>
-    </style>
-
-    <style name="InvPopupText">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:textColor">@color/PopupTextColor</item>
-        <item name="android:text">@string/inv_popup_text</item>
-        <item name="android:gravity">center</item>
-    </style>
-
-    <style name="InvPopupButton" parent="@style/GameButton">
-        <item name="android:background">@color/ButtonTextColor</item>
-        <item name="android:textColor">@color/AccentColor</item>
-    </style>
-
-    <style name="SignOutButton" parent="@style/GameButton">
-        <item name="android:background">@color/SignOutButtonBackground</item>
-        <item name="android:textColor">@color/SignOutButtonTextColor</item>
-    </style>
-
-    <style name="FigureView">
-        <item name="android:layout_width">150dp</item>
-        <item name="android:layout_height">150dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:layout_marginBottom">20dp</item>
-    </style>
-
-    <style name="FigureLabel">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="ScoreToast">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:layout_marginBottom">20dp</item>
-    </style>
-
-    <style name="ScoresBox">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#f0f0f0</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:layout_marginTop">30dp</item>
-        <item name="android:padding">20dp</item>
-    </style>
-
-    <style name="ButtonsBox">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:padding">20dp</item>
-        <item name="android:gravity">center</item>
-    </style>
-
-    <style name="ScoreText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:gravity">left</item>
-    </style>
-
-    <style name="Instructions" parent="@style/Blurb">
-        <item name="android:layout_marginBottom">20dp</item>
-    </style>
-
-    <style name="ScoreLabel">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <style name="ScoreDisplay">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">30sp</item>
+    <style name="ToggleStyle" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/btn_text_size</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/AccentColor</item>
-        <item name="android:layout_marginBottom">10dp</item>
-    </style>
-
-    <style name="PlacementDisplay">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/BlurbColor</item>
-    </style>
-
-    <style name="SectionLabel">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/AccentColor</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:layout_marginBottom">20dp</item>
     </style>
 </resources>
