--- a/app/src/main/res/layout-land/main_menu.xml
+++ b/app/src/main/res/layout-land/main_menu.xml
@@ -27,7 +27,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_tiled"
-    android:scrollbars="vertical">
+    android:scrollbars="vertical"
+    tools:context="by.klnvch.link5dots.MainMenuActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,6 +60,7 @@
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_android_48dp"
                 android:drawableStart="@drawable/ic_android_48dp"
+                android:onClick="onClick"
                 android:text="@string/menu_single_player"
                 tools:ignore="ButtonStyle" />
 
@@ -69,6 +71,7 @@
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_person_48dp"
                 android:drawableStart="@drawable/ic_person_48dp"
+                android:onClick="onClick"
                 android:text="@string/menu_multi_player"
                 tools:ignore="ButtonStyle" />
         </LinearLayout>
@@ -85,6 +88,7 @@
                 android:layout_weight="3"
                 android:drawableLeft="@drawable/ic_star_48dp"
                 android:drawableStart="@drawable/ic_star_48dp"
+                android:onClick="onClick"
                 android:text="@string/scores_title" />
 
             <ImageButton
@@ -93,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/settings_label"
+                android:onClick="onClick"
                 android:src="@drawable/ic_settings_48dp" />
 
             <ImageButton
@@ -101,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/application_info_label"
+                android:onClick="onClick"
                 android:src="@drawable/ic_info_48dp" />
 
             <ImageButton
@@ -109,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/how_to_title"
+                android:onClick="onClick"
                 android:src="@drawable/ic_help_48dp" />
 
         </LinearLayout>
