--- a/app/src/main/res/layout-land/multiplayer_menu.xml
+++ b/app/src/main/res/layout-land/multiplayer_menu.xml
@@ -30,7 +30,8 @@
     android:background="@drawable/paper_tiled"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/btn_table_padding">
+    android:padding="@dimen/btn_table_padding"
+    tools:context="by.klnvch.link5dots.MultiPlayerMenuActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,6 +45,7 @@
             android:layout_weight="1"
             android:drawableLeft="@drawable/ic_people_48dp"
             android:drawableStart="@drawable/ic_people_48dp"
+            android:onClick="onClick"
             android:text="@string/two_players"
             tools:ignore="ButtonStyle" />
 
@@ -54,6 +56,7 @@
             android:layout_weight="1"
             android:drawableLeft="@drawable/ic_bluetooth_48dp"
             android:drawableStart="@drawable/ic_bluetooth_48dp"
+            android:onClick="onClick"
             android:text="@string/bluetooth_settings"
             tools:ignore="ButtonStyle" />
 
@@ -71,6 +74,7 @@
             android:layout_weight="1"
             android:drawableLeft="@drawable/ic_router_48dp"
             android:drawableStart="@drawable/ic_router_48dp"
+            android:onClick="onClick"
             android:text="@string/menu_local_network"
             tools:ignore="ButtonStyle" />
 
@@ -81,6 +85,7 @@
             android:layout_weight="1"
             android:drawableLeft="@drawable/ic_public_48dp"
             android:drawableStart="@drawable/ic_public_48dp"
+            android:onClick="onClick"
             android:text="@string/menu_online_game"
             android:visibility="invisible"
             tools:ignore="ButtonStyle" />
