--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,24 +25,12 @@
 <resources>
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@null</item>
-        <item name="android:buttonStyle">@style/ButtonStyle</item>
-        <item name="android:imageButtonStyle">@style/ImageButtonStyle</item>
-        <item name="android:buttonStyleToggle">@style/ToggleStyle</item>
+        <item name="buttonStyle">@style/ButtonStyle</item>
+        <item name="android:buttonStyleToggle">@style/ButtonStyle</item>
         <item name="colorButtonNormal">@color/white</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:onClick">onClick</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/btn_text_size</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="ImageButtonStyle" parent="Widget.AppCompat.ImageButton">
-        <item name="android:onClick">onClick</item>
-    </style>
-
-    <style name="ToggleStyle" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/btn_text_size</item>
         <item name="android:textStyle">bold</item>
