--- a/app/src/main/res/layout-land/activity_bluetooth_picker.xml
+++ b/app/src/main/res/layout-land/activity_bluetooth_picker.xml
@@ -50,7 +50,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/bluetooth_only_visible_to_paired_devices"
-            android:textColor="@color/black"
             android:textSize="@dimen/bt_text_size" />
 
     </LinearLayout>
@@ -60,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/separator_width"
         android:layout_below="@id/layout_visibility"
-        android:background="@color/black" />
+        android:background="@color/foreground_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -83,7 +82,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:text="@string/bluetooth_preference_paired_devices"
-                android:textColor="@color/black"
                 android:textSize="@dimen/bt_text_size"
                 android:textStyle="bold" />
 
@@ -108,7 +106,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:text="@string/bluetooth_preference_found_devices"
-                android:textColor="@color/black"
                 android:textSize="@dimen/bt_text_size"
                 android:textStyle="bold" />
 
@@ -128,7 +125,6 @@
                 android:layout_below="@id/label_available_devices"
                 android:padding="@dimen/btn_table_padding"
                 android:text="@string/bluetooth_no_devices_found"
-                android:textColor="@color/black"
                 android:textSize="@dimen/bt_text_size"
                 android:visibility="gone" />
 
