--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -48,8 +48,8 @@
             android:layout_alignParentStart="true"
             android:contentDescription="@string/apn_user"
             android:paddingBottom="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
             android:paddingTop="4dp"
             android:src="@drawable/ic_mood_48dp" />
 
@@ -99,8 +99,8 @@
             android:layout_alignParentStart="true"
             android:contentDescription="@string/phone_language"
             android:paddingBottom="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
             android:paddingTop="4dp"
             android:src="@drawable/ic_language_48dp" />
 
@@ -150,10 +150,10 @@
             android:layout_alignParentStart="true"
             android:contentDescription="@string/phone_language"
             android:paddingBottom="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
             android:paddingTop="4dp"
-            android:src="@drawable/ic_vibration_black_24dp" />
+            android:src="@drawable/ic_vibration_48dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -170,7 +170,7 @@
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/vibration" />
+                android:text="@string/settings_vibration" />
 
             <TextView
                 android:id="@+id/vibration_details"
@@ -178,6 +178,57 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/switch_on_text" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/settings_night_mode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_selector"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="onClick"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/icon_night_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:contentDescription="@string/phone_language"
+            android:paddingBottom="4dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:paddingTop="4dp"
+            android:src="@drawable/ic_wb_sunny_48dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/icon_night_mode"
+            android:layout_toRightOf="@+id/icon_night_mode"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title_night_mode"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_night_mode" />
+
+            <TextView
+                android:id="@+id/details_night_mode"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/switch_off_text" />
 
         </LinearLayout>
 
