--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -25,7 +25,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="#FF000000">
 
     <by.klnvch.link5dots.GameView
         android:id="@+id/game_view"
@@ -37,7 +37,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
-        card_view:cardBackgroundColor="#FFFFFFFF"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="8dp">
 
