--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,18 +22,7 @@
   ~ SOFTWARE.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/paper_tiled"
-    android:padding="10dp"
-    android:scrollbars="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/how_to_text"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size_help_content" />
-
-</ScrollView>
+<resources>
+    <color name="background_color">#FF212121</color>
+    <color name="foreground_color">#FFFAFAFA</color>
+</resources>
