--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,15 +23,16 @@
   -->
 
 <resources>
-    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+
+    <style name="AppTheme" parent="@style/Theme.AppCompat.DayNight.DarkActionBar">
         <item name="android:windowBackground">@null</item>
         <item name="buttonStyle">@style/ButtonStyle</item>
         <item name="android:buttonStyleToggle">@style/ButtonStyle</item>
-        <item name="colorButtonNormal">@color/white</item>
+        <item name="colorButtonNormal">@color/background_color</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/foreground_color</item>
         <item name="android:textSize">@dimen/btn_text_size</item>
         <item name="android:textStyle">bold</item>
     </style>
